Fix Java coding style issues.
Change-Id: Ic04380a135eefd0be6222f6d7e5a1f0979536497